# simplebot3

./: Readme.md  ros_mcp_robot_guide.md
docker_workspace/: 99-usb-serial.rules  Dockerfile  opencv_install.sh  (+9 more)
ros_ws/src/motor_controller2/: CMakeLists.txt  package.xml
ros_ws/src/motor_controller2/config/: params.yaml
ros_ws/src/motor_controller2/launch/: robot_control_launch.py
ros_ws/src/motor_controller2/motor_controller2/: send_cmd_vel.py
ros_ws/src/motor_controller2/scripts/: kinematics2serial.py  odom.py
ros_ws/src/motor_controller2/src/: joy2cmdvel.cpp
ros_ws/src/simplebot_description/: CMakeLists.txt  package.xml
ros_ws/src/simplebot_description/config/: joint_limits.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml  sensors_3d.yaml  simplebot2.srdf
ros_ws/src/simplebot_description/config/roarm_m2/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  roarm_m2.ros2_control.xacro  roarm_m2.srdf  roarm_m2.urdf.xacro  ros2_controllers.yaml
ros_ws/src/simplebot_description/launch/: display.launch.py  gui.launch.py  load_ros2_controllers.launch.py  robot_state_publisher.launch.py  simplebot_bringup.launch.py
ros_ws/src/simplebot_description/meshes/femto_bolt/: femto_bolt.stl
ros_ws/src/simplebot_description/meshes/roarm_m2/: Gripper-B.stl  gear_arm.stl  gripper_base.stl  left_finger.stl  link3.stl  link4.stl  link5.stl  right_finger.stl  right_swing_arm.stl  straight_bracket.stl
ros_ws/src/simplebot_description/meshes/simplebot/: RPLIDAR C1.stl  a010_bracket.part  a010_bracket.stl  base_link.part  base_link.stl  femto_bolt_bracket.stl  frame1.part  frame2.part  frame2.stl  frame3.part  frame4.stl  frame4_no_camera.part  motor.stl  motor_bracket_front_left.part  motor_bracket_front_left.stl  motor_bracket_front_right.part  motor_bracket_front_right.stl  motor_bracket_rear_left.part  motor_bracket_rear_right.part  motor_front_left.part  motor_front_left.stl  motor_front_right.part  motor_front_right.stl  motor_rear_left.part  motor_rear_left.stl  motor_rear_right.part  motor_rear_right.stl  roarm_bracket.part  roarm_bracket.stl  rplidar_c1.part  rplidar_c1_fixed_x0.stl  side_bracket_left.part  side_bracket_left.stl  side_bracket_right.part  top_bracket.part
ros_ws/src/simplebot_description/simplebot_description/: mecanum_joint_state_publisher.py
ros_ws/src/simplebot_description/urdf/: drive.xacro  gazebo.xacro  parts.xacro  wheel.xacro
ros_ws/src/simplebot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  simplebot_ros2_control.urdf.xacro
ros_ws/src/simplebot_description/urdf/control_m2/: initial_positions.yaml  roarm_m2.ros2_control.xacro  roarm_m2.srdf  roarm_m2.urdf.xacro
ros_ws/src/simplebot_description/urdf/femto_bolt/: femto_bolt.urdf.xacro
ros_ws/src/simplebot_description/urdf/roarm_m2/: gripper.xacro  roarm_m2.gazebo  roarm_m2.trans  roarm_m2.xacro
ros_ws/src/simplebot_description/urdf/robots/: simplebot_description.urdf.xacro  simplebot_legacy.urdf.xacro
ros_ws/src/simplebot_simulation/: CMakeLists.txt  README.md  package.xml
ros_ws/src/simplebot_simulation/config/: ros_gz_bridge.yaml
ros_ws/src/simplebot_simulation/launch/: gazebo_nav2_sim.launch.py  gazebo_sim.launch.py  moveit.launch.py  sim_bot.launch.py  simplebot_rosmaster.gazebo.launch.py
ros_ws/src/simplebot_simulation/rviz/: yahboom_rosmaster_gazebo_sim.rviz
ros_ws/src/simplebot_simulation/worlds/: empty.world
(+84 files in other folders)
